Edited wiki page PyPWS through web user interface.

--- a/wiki/PyPWS.wiki
+++ b/wiki/PyPWS.wiki
@@ -71,8 +71,8 @@ GRASS_VERSION="7.0.svn"
 Make sure the log files are accessible by your web server. The workdir is used to create the temporally GRASS GIS locations, based on the first complex raster or vector input. All results are stored as files in the outputdir.
 
 The PyWPSGrassModuleStarter includes a test which is automatically started if you execute the script in the command line. To start the PyWPSGrassModuleStarter make sure PyWPS is in your PYTHONPATH and all GRASS GIS relevant variables are set in GlobalGrassSetting.py, then type:
-{{{python PyWPSGrassModuleStarter.py
-}}}
+{{{python PyWPSGrassModuleStarter.py}}}
+
 This will start the test by executing v.voronoi. When successfully finished the path to the generated GML file is printed to stdout.
 
 == XML process description generation ==
