--- a/wiki/PyWPS_Integration.wiki
+++ b/wiki/PyWPS_Integration.wiki
@@ -137,4 +137,4 @@ To use a WPS service you will need a client. There are several clients (mostly w
 
 = Result =
 
-<wiki:video url="http://www.youtube.com/v/jMPb9MIVKJ4?fs=1&amp;hl=de_DE&amp;rel=0&amp;hd=1"/>
+<wiki:video url="http://www.youtube.com/v/jMPb9MIVKJ4"/>
